test_yuriiq/catalog/language/russian/russian.php
<?php

// time
$_['time_format']	= 'H:i:s';

// text
$_['text_select']	= ' --- Выберите --- ';
$_['text_yes']	= 'Да';
$_['text_pagination']	= 'Показано с {start} по {end} из {total} (всего {pages} страниц)';
$_['text_none']	= ' --- Не выбрано --- ';
$_['text_all_zones']	= 'Все зоны';
$_['text_separator']	= ' &raquo; ';
$_['text_home']	= '<i class="fa fa-home"></i>Главная';
$_['text_no']	= 'Нет';

// error
$_['error_upload_999']	= 'Неизвестная ошибка!';
$_['error_upload_7']	= 'Не удалось записать файл на диск!';
$_['error_upload_8']	= 'Загружаемый на сервер файл не подходит по расширению!';
$_['error_upload_6']	= 'Отсутсвует временная папка!';
$_['error_upload_4']	= 'Файл не был загружен!';
$_['error_upload_3']	= 'Загружаемый на сервер файл был загружен не полностью!';
$_['error_upload_2']	= 'Загружаемый на сервер файл превышает параметр MAX_FILE_SIZE который определен в HTML форме!';
$_['error_upload_1']	= 'Загружаемый на сервер файл превышает параметр upload_max_filesize в php.ini!';

// button
$_['button_save_list']	= 'Сохранить список';
$_['button_download']	= 'Скачать';
$_['button_update']	= 'Обновить';
$_['button_print']	= 'Печать';
$_['button_quote']	= 'Узнать цены';
$_['button_guest']	= 'Оформление заказа без регистрации';
$_['button_delete']	= 'Удалить';
$_['button_checkout']	= 'Оформление заказа';
$_['button_compare']	= 'В сравнение';
$_['button_shopping']	= 'Продолжить покупки';
$_['button_back']	= 'Назад';
$_['button_wishlist']	= 'В закладки';
$_['button_search']	= 'Поиск';
$_['button_upload']	= 'Загрузить файл';
$_['button_return']	= 'Возврат товара';
$_['button_cart']	= 'Купить';
$_['button_coupon']	= 'Применение купона';
$_['button_voucher']	= 'Применить подарочный сертификат';
$_['button_reviews']	= 'Отзывы';
$_['button_reward']	= 'Применить бонусные баллы';
$_['button_shipping']	= 'Применить Доставку';
$_['button_confirm']	= 'Подтверждение заказа';
$_['button_continue']	= 'Продолжить';
$_['button_change_address']	= 'Изменить адрес';
$_['button_view']	= 'Просмотр';
$_['button_write']	= 'Написать отзыв';
$_['button_login']	= 'Войти';
$_['button_edit']	= 'Редактировать';
$_['button_remove']	= 'Удалить';
$_['button_reorder']	= 'Дополнительный заказ';
$_['button_filter']	= 'Уточнение поиска';
$_['button_add_address']	= 'Добавить адрес';
$_['button_new_address']	= 'Новый адрес';

// direction
$_['direction']	= 'ltr';

// code
$_['code']	= 'ru';

// thousand
$_['thousand_point']	= ' ';

// date
$_['date_format_short']	= 'd.m.Y';
$_['date_format_long']	= 'l d F Y';

// decimal
$_['decimal_point']	= '.';
?>